samedaymusic.com (archived on 2017-08-30)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;shopping",
  "char_count": 13406,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.28,
  "homepage_snapshot_redirected_domain": "samedaymusic.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20171006133701id_/http://www.samedaymusic.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20171006133701id_/http%3A//samedaymusic.com",
  "interval": "2017_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "samedaymusic.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170830160134id_/http%3A//www.samedaymusic.com/privacy",
  "policy_title": "Privacy - SameDayMusic.com",
  "policy_url": "samedaymusic.com/privacy",
  "sha1": "31fa697f76ad186d6c2d45342df55f6fe9c03c5d",
  "simhash": 4546054642895053286,
  "simhash_updated": false,
  "site_hostname": "samedaymusic.com",
  "site_url": "http://samedaymusic.com",
  "smog": 13.97,
  "strict_updated": false,
  "timestamp": "20170830160134",
  "word_count": 2158,
  "year": 2017
}

--- a/s/sa/sam/samedaymusic.com.html
+++ b/s/sa/sam/samedaymusic.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the samedaymusic.com privacy policy that was archived on 2017-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170616180221id_/http%3A//www.samedaymusic.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the samedaymusic.com privacy policy that was archived on 2017-08-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170830160134id_/http%3A//www.samedaymusic.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <meta name="description" content="Guaranteed same day shipment or $100 cash back on most products. Choose SameDayMusic.com - 240,000+ items in stock.">
@@ -20,11 +20,10 @@ var baseUrl = 'http://www.samedaymusic.com';    //]]></script>
 <div class="container">
 <div id="hd" class="span-25 last clear">
 <div id="hd-call">
-<img width="1" height="1" src="http://www.samedaymusic.com/tp/init-cookie.png">
 <span>Toll Free</span>
 <span class="number">866-SHIP-SDM (866-744-7736)</span>
 Mention service code
-<span class="code">20D-DZK5</span>
+<span class="code">200-NZ1D</span>
 <a href="http://www.samedaymusic.com/info" class="popup-link" title="Hours" rel="#popup-hours">Hours</a>
 <ul id="popup-hours" class="popup">
 <li>Mon, Tue, Wed, Thur, Fri 7AM - 11PM</li><li>Sat, Sun 9AM - 10PM</li> </ul>
@@ -33,7 +32,7 @@ Mention service code
 <a href="http://www.samedaymusic.com/sitemap">Site Map</a>&nbsp;|&nbsp;
 <a href="http://www.samedaymusic.com/info#faq">FAQ</a>&nbsp;|&nbsp;
 <a href="http://www.samedaymusic.com/form--contact">Contact Us</a>&nbsp;|&nbsp;
-<a href="https://www.samedaymusic.com/orderinfo/rx--1497636142.4">Order Tracking</a>
+<a href="https://www.samedaymusic.com/orderinfo/rx--1504108894.93">Order Tracking</a>
 </div>
 <a id="hd-logo" href="http://www.samedaymusic.com/">&nbsp;</a>
 <div id="hd-search-container">
@@ -72,7 +71,7 @@ Same Day Shipping
 <a href="http://www.samedaymusic.com/browse--Accessories--2348">Accessories</a>
 </li>
 <li id="hd-cart">
-<a href="http://www.samedaymusic.com/shopcart--4905">YOUR CART
+<a href="http://www.samedaymusic.com/shopcart--3237">YOUR CART
 </a>
 </li>
 </ul>
@@ -82,7 +81,7 @@ Same Day Shipping
 <a class="column span-3 prepend-1 prepend-top last clear" href="http://www.samedaymusic.com/privacy--span">En Espanol</a>
 <div class="span-25 last clear wikibox">
 <div class="span-25 last clear bd">
- <h1><a name="Privacy"></a> Privacy </h1>
+<h1><a name="Privacy"></a> Privacy </h1>
 <p>
 When you shop with Same Day Music, you expect a quality, no-hassle experience. You may rest assured that these expectations extend to our treatment of your privacy. We respect the information we receive when you visit our Website and interact with our customer representatives.
 </p><p>
@@ -216,13 +215,13 @@ This Website contains links to other sites. Please note that Same Day Music is n
 <div class="phone">Toll Free 866-SHIP-SDM (866-744-7736)</div>
 <div class="hours">
 Available until 11 PM (EST) today.
-Mention special code <span class="code">20D-DZK5</span> when you call.
+Mention special code <span class="code">200-NZ1D</span> when you call.
 </div>
 </div>
 <div class="column span-7 last footer-spanish">
 <div class="phone">En español: 866-349-7778 (m-f)</div>
 <div class="hours">
-9 AM to 5 PM (EST)
+<a class="column clear" href="http://www.samedaymusic.com/info--span">HOURS</a>
 </div>
 </div>
 </div>
@@ -280,6 +279,122 @@ full site functionality (<a href="http://www.samedaymusic.com/privacy#cookie">de
         recordEvent.record('screensize');
     });
     </script>
+<form name="giveaway_hover" id="giveaway_hover" action="http://www.samedaymusic.com/giveaway-hover" method="post" class="giveaway-hover-2">
+<div class="hd">
+<span class="hd">Get the best deals at the speed of sound!</span>
+</div>
+<div class="bd">
+<div class="gh-promo">
+<span class="hd">PLUS</span> exclusive discounts and news straight to your inbox.
+</div>
+<p>
+<span class="hd">Totally FREE</span> - just provide your email address.
+<br>
+(The only risk in joining is saving too much!)
+</p>
+<input type="text" name="form[email]" id="form-email" value="" size="20" maxlength="254" title="Email Address"> <div class="want-catalog">
+<input type="hidden" name="form[catalog]" value="0"><input type="checkbox" name="form[catalog]" id="form-catalog" value="1" title="Catalog"> I'd like Sonic Savings via postal service, too.
+</div>
+<div class="catalog-fields">
+<input type="text" name="form[fname]" id="form-fname" value="" size="20" maxlength="40" title="First Name">
+<input type="text" name="form[lname]" id="form-lname" value="" size="20" maxlength="40" title="Last Name">
+<input type="text" name="form[addr1]" id="form-addr1" value="" size="20" maxlength="40" title="Street Address">
+<input type="text" name="form[addr2]" id="form-addr2" value="" size="20" maxlength="40" title="Apt/Suite">
+<input type="text" name="form[city]" id="form-city" value="" size="20" maxlength="40" title="City">
+<select name="form[state]" id="form-state" title="State">
+<option value="" selected="selected">Click to select</option>
+<option value="AL">AL - Alabama</option>
+<option value="AK">AK - Alaska</option>
+<option value="AZ">AZ - Arizona</option>
+<option value="AR">AR - Arkansas</option>
+<option value="CA">CA - California</option>
+<option value="CO">CO - Colorado</option>
+<option value="CT">CT - Connecticut</option>
+<option value="DE">DE - Delaware</option>
+<option value="DC">DC - District Of Columbia</option>
+<option value="FL">FL - Florida</option>
+<option value="GA">GA - Georgia</option>
+<option value="HI">HI - Hawaii</option>
+<option value="ID">ID - Idaho</option>
+<option value="IL">IL - Illinois</option>
+<option value="IN">IN - Indiana</option>
+<option value="IA">IA - Iowa</option>
+<option value="KS">KS - Kansas</option>
+<option value="KY">KY - Kentucky</option>
+<option value="LA">LA - Louisiana</option>
+<option value="ME">ME - Maine</option>
+<option value="MD">MD - Maryland</option>
+<option value="MA">MA - Massachusetts</option>
+<option value="MI">MI - Michigan</option>
+<option value="MN">MN - Minnesota</option>
+<option value="MS">MS - Mississippi</option>
+<option value="MO">MO - Missouri</option>
+<option value="MT">MT - Montana</option>
+<option value="NE">NE - Nebraska</option>
+<option value="NV">NV - Nevada</option>
+<option value="NH">NH - New Hampshire</option>
+<option value="NJ">NJ - New Jersey</option>
+<option value="NM">NM - New Mexico</option>
+<option value="NY">NY - New York</option>
+<option value="NC">NC - North Carolina</option>
+<option value="ND">ND - North Dakota</option>
+<option value="OH">OH - Ohio</option>
+<option value="OK">OK - Oklahoma</option>
+<option value="OR">OR - Oregon</option>
+<option value="PA">PA - Pennsylvania</option>
+<option value="RI">RI - Rhode Island</option>
+<option value="SC">SC - South Carolina</option>
+<option value="SD">SD - South Dakota</option>
+<option value="TN">TN - Tennessee</option>
+<option value="TX">TX - Texas</option>
+<option value="UT">UT - Utah</option>
+<option value="VT">VT - Vermont</option>
+<option value="VA">VA - Virginia</option>
+<option value="WA">WA - Washington</option>
+<option value="WV">WV - West Virginia</option>
+<option value="WI">WI - Wisconsin</option>
+<option value="WY">WY - Wyoming</option>
+<optgroup id="form-state-optgroup-Armed Forces" label="Armed Forces">
+</optgroup>
+<option value="AA">AA - Armed Forces Americas</option>
+<option value="AE">AE - Armed Forces Europe</option>
+<option value="AP">AP - Armed Forces Pacific</option>
+<optgroup id="form-state-optgroup-U.S. TERRITORIES" label="U.S. TERRITORIES">
+</optgroup>
+<option value="FM">FM - Federated States of Micronesia</option>
+<option value="GU">GU - Guam</option>
+<option value="MH">MH - Marshall Islands</option>
+<option value="MP">MP - Northern Mariana Islands</option>
+<option value="PW">PW - Palau</option>
+<option value="PR">PR - Puerto Rico</option>
+<option value="VI">VI - Virgin Islands</option>
+<optgroup id="form-state-optgroup-CANADIAN PROVINCES" label="CANADIAN PROVINCES">
+</optgroup>
+<option value="AB">AB - Alberta</option>
+<option value="BC">BC - British Columbia</option>
+<option value="MB">MB - Manitoba</option>
+<option value="NB">NB - New Brunswick</option>
+<option value="NL">NL - Newfoundland and Labrador</option>
+<option value="NT">NT - Northwest Territories</option>
+<option value="NS">NS - Nova Scotia</option>
+<option value="NU">NU - Nunavut</option>
+<option value="ON">ON - Ontario</option>
+<option value="PE">PE - Prince Edward Island</option>
+<option value="QC">QC - Quebec</option>
+<option value="SK">SK - Saskatchewan</option>
+<option value="YT">YT - Yukon</option>
+<option value="NA">Location not listed</option>
+</select>
+<input type="text" name="form[zip]" id="form-zip" value="" size="20" maxlength="7" title="Zip Code"> </div>
+</div>
+<div class="ft">
+<input type="hidden" name="form[newsletter_signup]" value="1" title="" id="form-newsletter_signup">
+<input type="hidden" name="form[auto_popup]" value="" title="" id="form-auto_popup">
+<input type="hidden" name="form[botcheck]" value="IfgzI1RLUNQKAG3yDAcho+NXggfEKQ89dCdbqZGh7aLn9cPZaCZbYU2M9AjX7nR4jULjv4oQQTFxpp+ANJCWSg==" id="form-botcheck">
+<input type="hidden" name="form[formname]" value="questionnaire_giveaway_hover" id="form-formname"> <input type="submit" name="gh-submit" id="gh-submit" value=" "> <span class="fineprint">We will not sell your email address. You can opt out at any time.</span>
+<span class="close">No thanks, take me to Same Day Music.</span>
+</div>
+</form>
 <script type="text/javascript">"function"!=typeof loadGoogleAdConversion&&(window.loadGoogleAdConversion=function(){var a=document.createElement("script");a.type="text/javascript",a.async=!0;var b=document.getElementsByTagName("head")[0];b.appendChild(a),a.onload=function(){window.google_trackConversion({google_conversion_id:1051081663,google_conversion_language:"en",google_conversion_format:"3",google_conversion_color:"ffffff",google_conversion_label:"ywmMCPPW0wEQv_eY9QM",google_conversion_value:0,google_remarketing_only:!0})},a.src=("http:"===document.location.protocol?"http:":"https:")+"//www.googleadservices.com/pagead/conversion_async.js"},window.addEventListener?window.addEventListener("load",loadGoogleAdConversion):window.attachEvent("onload",loadGoogleAdConversion));</script>
 <noscript>
 <div style="display:inline;">
@@ -290,11 +405,20 @@ full site functionality (<a href="http://www.samedaymusic.com/privacy#cookie">de
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
     ga('create','UA-25064365-1','auto');ga('send','pageview');
     </script>
+<script type="text/javascript">
+            $(window).load(function() {
+                // Only auto display if browser accepts cookies and there are no CSE popup.
+                if (document.cookie.length > 0 && $("#cse-popup").length == 0) {
+                    $("#giveaway_hover #form-auto_popup").val("1");
+                    giveawayHover.show();
+                }
+            });
+        </script>
 </div>
 </div>
 </div>
 <div id="bg-dim">&nbsp;</div>
-<script type="text/javascript">if(typeof newrelic == 'object'){newrelic.setCustomAttribute('sessid',57659028);}</script>
+<script type="text/javascript">if(typeof newrelic == 'object'){newrelic.setCustomAttribute('sessid',57281336);}</script>
 
 
 </body></html>
