--- a/a/av/ava/avanset.com.html
+++ b/a/av/ava/avanset.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the avanset.com privacy policy that was archived on 2017-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170630232605id_/http%3A//www.avanset.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the avanset.com privacy policy that was archived on 2017-08-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170831030835id_/https%3A//www.avanset.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="fancybox-margin fancybox-lock"><head>
 <script async="" src="//www.google-analytics.com/analytics.js"></script><script>
@@ -63,7 +63,7 @@
 
 
 	params.beforeClose = function() {
-		setCookie('bShowPopup117',1,90);
+		setCookie('bShowPopup126',1,90);
 	}
 
 
@@ -435,12 +435,12 @@ av.submitDownloadForm = function(){
 
     
 <div class="fancybox-overlay fancybox-overlay-fixed" style="width: auto; height: auto; display: block;"><div class="fancybox-wrap fancybox-desktop fancybox-type-inline fancybox-opened" tabindex="-1" style="width: 804px; height: auto; position: absolute; top: 196px; left: 281px; opacity: 1; overflow: visible;"><div class="fancybox-skin" style="padding: 0px; width: auto; height: auto;"><div class="fancybox-outer"><div class="fancybox-inner" style="overflow: auto; width: 800px; height: 370px;"><div id="popup" style="display: block;">
-	  <h2>Summer Sale! <span class="bold orange">25% Discount</span> for All Products!</h2>
+	  <h2>Autumn is coming! <span class="bold orange">20% Discount</span> for All Products!</h2>
 	  		<p class="secoff">This is a <span class="bold">ONE TIME OFFER</span>. You will never see this Again</p>
-	  	  <div id="homepopl" class="text"><p>Instant Discount</p> <p><img src="/design/images/screen/homepop.png" width="220" height="151" alt=""></p> <p><span>25% OFF</span></p></div>
+	  	  <div id="homepopl" class="text"><p>Instant Discount</p> <p><img src="/design/images/screen/homepop.png" width="220" height="151" alt=""></p> <p><span>20% OFF</span></p></div>
 	  <div id="homepopr">
 		
-				<p class="alloc">Enter Your Email Address to Receive Your 25% OFF Discount Code Plus... Our Exclusive Weekly Deals</p>
+				<p class="alloc">Enter Your Email Address to Receive Your 20% OFF Discount Code Plus... Our Exclusive Weekly Deals</p>
 		<form action="" method="post" onsubmit="return win1Verify();" name="win1Form">
 		  <div class="error_message" id="win1Err" style="padding-bottom:10px;display:none">Please enter a correct email to Get your Discount Code</div>
 		  <input type="hidden" name="act" value="promoSubscribe">
