--- a/a/ah/aht/ahtribune.com.html
+++ b/a/ah/aht/ahtribune.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the ahtribune.com privacy policy that was archived on 2017-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170622225956id_/http%3A//ahtribune.com/about.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ahtribune.com privacy policy that was archived on 2017-08-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170831042003id_/https%3A//ahtribune.com/about.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en-gb" dir="ltr" class="com_custom view-show itemid-158 j34 mm-hover"><head>
 <script async="" src="//www.google-analytics.com/analytics.js"></script><script src="/media/jui/js/jquery.min.js" type="text/javascript"></script>
-	  <base href="http://ahtribune.com/about.html">
+	  <base href="https://ahtribune.com/about.html">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="keywords" content="American Herald Tribune, ahtribune, alternative media, US, Canada">
   <meta name="description" content="American Herald Tribune is a genuinely independent online media outlet.  AHTribune is dedicated to strengthening and supporting independent journalism, and to improving the public's access to independent information sources.">
@@ -11,7 +11,7 @@
   <link href="/templates/t3_bs3_blank/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
   <link rel="stylesheet" href="/t3-assets/css/css-bd327.css?t=141" type="text/css">
   <link rel="stylesheet" href="/t3-assets/css/css-937ac.css?t=141" type="text/css">
-  <link rel="stylesheet" href="/t3-assets/css/css-436fa.css?t=270" type="text/css">
+  <link rel="stylesheet" href="/t3-assets/css/css-436fa.css?t=163" type="text/css">
   <style type="text/css">
 	#accordion_menu_125 {
 		background: #ffffff;
@@ -337,10 +337,16 @@ jQuery(document).ready(function($){
 			<div class="menu-link"><a href="/us/vault-7.html">Vault 7</a></div>
 		</div>
 	</li>
-	<li class="last">
+	<li>
 		<div class="item-wrapper">
 			<div class="menu-button"></div>
 			<div class="menu-link"><a href="/us/trump-at-war.html">Trump at War</a></div>
+		</div>
+	</li>
+	<li class="last">
+		<div class="item-wrapper">
+			<div class="menu-button"></div>
+			<div class="menu-link"><a href="/us/anglo-america.html">Anglo-America</a></div>
 		</div>
 		</li>
 	</ul></div></li>
@@ -538,10 +544,17 @@ jQuery(document).ready(function($){
 	</li>
 	<li class="last">
 		<div class="item-wrapper">
-			<div class="menu-button"></div>
+			<div class="menu-button"><img class="menuicon" alt="" src="/modules/mod_cinch_menu/tmpl/images/plus.png"></div>
 			<div class="menu-link"><a href="/human-rights.html">Human Rights</a></div>
 		</div>
+	<div class="ul-wrapper"><ul>
+	<li class="first last">
+		<div class="item-wrapper">
+			<div class="menu-button"></div>
+			<div class="menu-link"><a href="/human-rights/american-human-rights.html">American Human Rights</a></div>
+		</div>
 	</li></ul>
+	</div></li></ul>
 	
 </div></div></div>
   </div>
@@ -644,9 +657,21 @@ jQuery(document).ready(function($){
 <a class="" href="/youth.html" data-target="#">Youth </a>
 
 </li>
-<li data-id="129" data-level="1">
-<a class="" href="/human-rights.html" data-target="#">Human Rights </a>
+<li class="dropdown mega" data-id="129" data-level="1">
+<a class=" dropdown-toggle" href="/human-rights.html" data-target="#" data-toggle="dropdown">Human Rights <em class="caret"></em></a>
 
+<div class="nav-child dropdown-menu mega-dropdown-menu"><div class="mega-dropdown-inner">
+<div class="row">
+<div class="col-xs-12 mega-col-nav" data-width="12"><div class="mega-inner">
+<ul class="mega-nav level1">
+<li data-id="198" data-level="2">
+<a class="" href="/human-rights/american-human-rights.html" data-target="#">American Human Rights </a>
+
+</li>
+</ul>
+</div></div>
+</div>
+</div></div>
 </li>
 <li class="all-menu off-canvas-toggle" data-id="116" data-level="1" data-class="all-menu off-canvas-toggle" data-effect="off-canvas-effect-4" data-nav="#t3-off-canvas" data-pos="left">
 <a class="" href="#" data-target="#">All</a>
@@ -684,27 +709,27 @@ jQuery(document).ready(function($){
 	
 		
 	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 parallelogram padding-0"><div class="inner">
-	<a href="/world/north-africa-south-west-asia/quds-day.html">	<img src="/../cache/thumbs/8bf80510cf749d11805ec54c6e49a2e5.jpg" alt="Quds Day"></a>
-		<a href="/world/north-africa-south-west-asia/quds-day.html">		<div class="trending-category-title">
-			Quds Day		</div>
+	<a href="/us/anglo-america.html">	<img src="/../cache/thumbs/82afbcbdeae9fb5b3e2d294d890c8177.jpg" alt="Anglo-America"></a>
+		<a href="/us/anglo-america.html">		<div class="trending-category-title">
+			Anglo-America		</div>
 		</a>	
 		<div class="triangle triangle-right"></div><div class="triangle triangle-left"></div>
 	</div></div>
 	
 		
 	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 parallelogram padding-0"><div class="inner">
-	<a href="/world/north-africa-south-west-asia/saudi-qatar-rift.html">	<img src="/../cache/thumbs/9ccada7cd1265af872a43bf574093d26.jpg" alt="Saudi-Qatar Rift"></a>
-		<a href="/world/north-africa-south-west-asia/saudi-qatar-rift.html">		<div class="trending-category-title">
-			Saudi-Qatar Rift		</div>
+	<a href="/us/trump-at-war.html">	<img src="/../cache/thumbs/03efc3dbaa0ea4775862f76ceea236c2.jpg" alt="Trump at War"></a>
+		<a href="/us/trump-at-war.html">		<div class="trending-category-title">
+			Trump at War		</div>
 		</a>	
 		<div class="triangle triangle-right"></div><div class="triangle triangle-left"></div>
 	</div></div>
 	
 		
 	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 parallelogram padding-0"><div class="inner">
-	<a href="/world/north-africa-south-west-asia/war-on-yemen.html">	<img src="/../cache/thumbs/6b72eda1de78d76b419b3a8d34afc973.jpg" alt="War on Yemen"></a>
-		<a href="/world/north-africa-south-west-asia/war-on-yemen.html">		<div class="trending-category-title">
-			War on Yemen		</div>
+	<a href="/us/maga.html">	<img src="/../cache/thumbs/4f1beba4e202d9e56f7b892fe7fc40ca.jpg" alt="MAGA"></a>
+		<a href="/us/maga.html">		<div class="trending-category-title">
+			MAGA		</div>
 		</a>	
 		<div class="triangle triangle-right"></div><div class="triangle triangle-left"></div>
 	</div></div>
