--- a/c/cr/cru/cru.org.html
+++ b/c/cr/cru/cru.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cru.org privacy policy that was archived on 2017-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170612024940id_/https%3A//www.cru.org/about/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cru.org privacy policy that was archived on 2017-08-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170831075922id_/https%3A//www.cru.org/about/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html prefix="og: http://ogp.me/ns#" xmlns:fb="http://ogp.me/ns/fb#" itemscope="" itemtype="http://schema.org/" lang="en" class="no-js wf-loading"><!--<![endif]--><head>
 <meta charset="utf-8">
@@ -38,11 +38,11 @@
 <link rel="dns-prefetch" href="//www.facebook.com">
 <link rel="dns-prefetch" href="//www.google-analytics.com">
 <meta property="og:type" content="article">
-</head><body class="ng-cloak page "><cq:include path="twitter-card" resourcetype="/apps/CruOrgApp/components/section/twitter-card">
+</head><body class="page "><cq:include path="twitter-card" resourcetype="/apps/CruOrgApp/components/section/twitter-card">
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;appId=116517098374395&amp;version=v2.0"></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="//use.typekit.net/usb5wjy.js" type="text/javascript" async=""></script><script type="text/javascript">(function(){var config={kitId:'usb5wjy',scriptTimeout:3000};var h=document.getElementsByTagName("html")[0];h.className+=" wf-loading";var t=setTimeout(function(){h.className=h.className.replace(/(\s|^)wf-loading(\s|$)/g," ");h.className+=" wf-inactive"},config.scriptTimeout);var tk=document.createElement("script"),d=false;tk.src='//use.typekit.net/'+config.kitId+'.js';tk.type="text/javascript";tk.async="true";tk.onload=tk.onreadystatechange=function(){var a=this.readyState;if(d||a&&a!="complete"&&a!="loaded")return;d=true;clearTimeout(t);try{Typekit.load(config)}catch(b){}};var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(tk,s)})();</script>
 <!--[if (!IE)|(gte IE 9)]><!-->
-<link rel="stylesheet" href="https://cdn1-www.cru.org/css/A.cru.css.pagespeed.cf.p2SlQ42drN.css">
+<link rel="stylesheet" href="https://cdn2-www.cru.org/css/A.cru.css.pagespeed.cf.cY2LtwbYzK.css">
 <!--<![endif]-->
 <!--[if lt IE 9]>
         <link rel="stylesheet" href="/css/cru.ie.css">
@@ -65,7 +65,6 @@
 </div>
 <script>var analSly=$("#analyticsSightly");var digitalData={page:{pageInfo:{pageName:(analSly.attr("pageName")>"")?analSly.attr("pageName"):"",onsiteSearchTerm:(analSly.attr("searchTerm")>"")?analSly.attr("searchTerm"):"",onsiteSearchResults:""},category:{primaryCategory:(analSly.attr("priCat")>"")?analSly.attr("priCat"):"",subCategory1:(analSly.attr("subCat1")>"")?analSly.attr("subCat1"):"",subCategory2:(analSly.attr("subCat2")>"")?analSly.attr("subCat2"):"",subCategory3:(analSly.attr("subCat3")>"")?analSly.attr("subCat3"):"",pageType:(analSly.attr("pageType")>"")?analSly.attr("pageType"):"",}}};if(analSly.attr("clearDDO")=="true"){digitalData={};};analSly.parent().remove();</script></div>
 <script src="//assets.adobedtm.com/3202ba9b02b459ee20779cfcd8e79eaf266be170/satelliteLib-6dd3db02902933d8623718855e23b0ee85dbb1ab.js"></script>
-<script src="//give-static.cru.org/app.js"></script>
 <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create','UA-9652718-4','auto');ga('require','displayfeatures');</script>
 <script>ga('send','pageview');</script>
 <script>ga('require','ecommerce');</script>
@@ -180,8 +179,10 @@
 <script src="//platform.twitter.com/widgets.js" id="twitter-wjs"></script>
 <script type="text/javascript" async="" defer="" src="//assets.pinterest.com/js/pinit.js"></script>
 <script src="//maps.googleapis.com/maps/api/js"></script>
-<script>(function(){angular.bootstrap(angular.element('body')[0],['cruNav']);})();</script>
-<script type="text/javascript" src="https://cdn2-www.cru.org/etc/designs/cru/clientlibs.min.js.pagespeed.jm.ZsUEq3U_2V.js"></script>
+<script src="https://cdn1-www.cru.org/scripts,_maphilight,_jquery.maphilight.min.js+scripts,_image-map-resizer,_js,_imageMapResizer.min.js+etc,_designs,_cru,_clientlibs.min.js.pagespeed.jc.lKGc0Ik6UB.js"></script><script>eval(mod_pagespeed_gtv2pdv_Ol);</script>
+<script>eval(mod_pagespeed_FHjhbGN2pp);</script>
+<script src="//give-static.cru.org/cruNav.js"></script>
+<script>eval(mod_pagespeed_oQGLtrJhLr);</script>
 <script type="text/javascript">_satellite.pageBottom();</script>
 
 
