gumroad.com (archived on 2017-08-31)
{
  "alexa_rank": 4913,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 16173,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.14,
  "homepage_snapshot_redirected_domain": "gumroad.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170930052705id_/https://gumroad.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170930052705id_/http%3A//gumroad.com",
  "interval": "2017_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "gumroad.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170831110016id_/https%3A//gumroad.com/privacy",
  "policy_title": "Gumroad - Privacy Policy",
  "policy_url": "gumroad.com/privacy",
  "sha1": "ed15747b2809bcf7968cabf44b75a5ca5ec30cfa",
  "simhash": 16457130593609685481,
  "simhash_updated": false,
  "site_hostname": "gumroad.com",
  "site_url": "http://gumroad.com",
  "smog": 16.16,
  "strict_updated": false,
  "timestamp": "20170831110016",
  "word_count": 2596,
  "year": 2017
}

--- a/g/gu/gum/gumroad.com.html
+++ b/g/gu/gum/gumroad.com.html
@@ -1,18 +1,18 @@
-<!--The following is the downloaded HTML source of the gumroad.com privacy policy that was archived on 2017-05-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170511211509id_/https%3A//gumroad.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gumroad.com privacy policy that was archived on 2017-08-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170831110016id_/https%3A//gumroad.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# gumroad: http://ogp.me/ns/fb/gumroad#">
 <link href="//static-1.gumroad.com" rel="dns-prefetch">
 <link href="//static-2.gumroad.com" rel="dns-prefetch">
 <title>Gumroad - Privacy Policy</title>
-<link rel="stylesheet" media="screen" href="https://static-1.gumroad.com/res/gumroad/assets/application-d2121567949402a967965539b0a9188a9803aab181a9f8f92f2472dea8e6ff6b.css">
+<link rel="stylesheet" media="screen" href="https://static-1.gumroad.com/res/gumroad/assets/application-c5de7e09b572d5a00be9adcbba1ba0491e285e813b67ac01ba903be3e12604af.css">
 
 
 <!--[if lt IE 10]>
-<link rel="stylesheet" media="screen" href="https://static-1.gumroad.com/res/gumroad/assets/application_split2-f9192bba6ef69db78d6485fc1c62374e3ae52f4ca77c75a82489bb7b84e04288.css" debug="false" />
+<link rel="stylesheet" media="screen" href="https://static-1.gumroad.com/res/gumroad/assets/application_split2-3dfcacd9e64ce610fb28ac30604785759ddfbe0fc20edcb8fb9289080964b405.css" debug="false" />
 <![endif]-->
 <meta name="csrf-param" content="authenticity_token">
-<meta name="csrf-token" content="jqWqdtBsPaRTBkJrUhJgMcgaJ00Sgs+jOQSr9+Vbwg8=">
+<meta name="csrf-token" content="iEX7fSnDW8J3wU3F/Cqq1TlSpJOhZeFbsXhKI9PO4IQ=">
 <meta content="149071038533330" property="fb:app_id">
 <meta content="http://www.facebook.com/gumroad" property="fb:page_id">
 <meta property="twitter:site" value="@gumroad">
@@ -20,9 +20,11 @@
 <meta content="en" property="gr:locale">
 <meta content="en" property="gr:locale:default">
 <meta content="true" property="gr:google_analytics:enabled">
+<meta content="production" property="gr:bugsnag:env">
+<meta content="true" property="gr:bugsnag:enabled">
 <meta content="true" property="gr:smyte:enabled">
 <meta content="720640c7124fa826706c0ff9b1716e30" property="gr:smyte:client_key">
-<meta content="2fac1c91bf5399f72eeafd64db5ffa66" property="gr:smyte:session_id">
+<meta content="3d4bc75aa3cb2246825e8c1c8a1060ca" property="gr:smyte:session_id">
 <meta content="consumer" property="gr:smyte:user_type">
 <meta property="gr:third_party_analytics_url" value="https://gumroad-analytics.com">
 <meta property="gr:boostable_id" value="BT-95261094-4">
@@ -36,7 +38,7 @@
 <meta content="initial-scale = 1.0, user-scalable = no, width = device-width" name="viewport">
 
 <link href="/favicon.ico" rel="shortcut icon">
-<script src="https://static-1.gumroad.com/res/gumroad/assets/extended_bundle-8d0b72db0b31b1ef4a75ff9b0f73af7e9366100bf578a363af94f3e0a014a796.js"></script>
+<script src="https://static-1.gumroad.com/res/gumroad/assets/extended_bundle-956cc1590d03b6b39b8381a1bdc3541c9323fc6bc58874fe04813957ecea69c3.js"></script>
 
 
 </head>
@@ -229,7 +231,7 @@ means data that is not associated with or linked to your Personal Data; Anonymou
 </a>
 </div>
 
-<form class="row formtastic user" id="login-form" autocomplete="off" novalidate="novalidate" action="https://gumroad.com/login" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="gPsULvGdpTXjyqUrG4dNgIjHBO7hrgucLJnO+N5gdpgOXr5YIfGYkbDM50BJlS2xQN0jo/MsxD8VnWUPOzu0lw=="><div class="row">
+<form class="row formtastic user" id="login-form" autocomplete="off" novalidate="novalidate" action="https://gumroad.com/login" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="yQu2FqnK2hABGIW2LunScLWIzWn7b6WmETJ+GeFXPzlBTk1rgAmB0nbZyHPSw3iljNpp+loKRP2gSjQ6MpnfvQ=="><div class="row">
 <div class="error-wrapper">
 <h3 class="error-indicator soft-hidden full column"></h3>
 </div>
@@ -248,6 +250,7 @@ Log in with Twitter
 <div class="classic-auth six columns">
 <input placeholder="Email address" class="required" type="email" name="user[login]" id="user_login">
 <input placeholder="Password" class="password required" type="password" name="user[password]" id="user_password">
+<input value="1" type="hidden" name="user[remember_me]" id="user_remember_me">
 </div>
 
 </div>
@@ -258,7 +261,7 @@ Log in with Twitter
 <button class="button-primary js-login-button">Login</button>
 </div>
 </form>
-<form id="forgot-password-form" class="soft-hidden formtastic user" novalidate="novalidate" action="https://gumroad.com/forgot_password" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="t0c27GZDOkbJvwg9//fiLPN1geobLiktzTxEQX8nc5454pyati8H4pq5Slat5YIdO2+mpwms5o70OO+2mnyxkQ=="><h3 class="error-indicator soft-hidden"></h3>
+<form id="forgot-password-form" class="soft-hidden formtastic user" novalidate="novalidate" action="https://gumroad.com/forgot_password" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="empShWVu3KVaD/SCHZo9KKBGvVOo2HobHs5M0TFai2HyL6n4TK2HZy3OuUfhsJf9mRQZwAm9m0Cvtgby4pRr5Q=="><h3 class="error-indicator soft-hidden"></h3>
 <input placeholder="Email address" class="email required" type="email" name="user[email]" id="user_email">
 <button class="button-primary js-forgot-password-button">Send</button>
 <span class="separator"></span>
@@ -282,7 +285,7 @@ Log in with Twitter
 </a>
 </div>
 
-<form class="row" action="https://gumroad.com/signup" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="FScQXYTPx80UpcrunxkCfdQBJE3z5L1lpVrzVdwc4FSbgrorVKP6aUejiIXNC2JMHBsDAOFmcsacXliiOUciWw=="><div class="row">
+<form class="row" action="https://gumroad.com/signup" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="nuvtQErWm+ghxjdJl0fDHePmTCqGQ8Mwah+7vf3xvSYWrhY9YxXAKlYHeoxrbWnI2rTouScmImvbZ/GeLj9dog=="><div class="row">
 <h3 class="error-indicator soft-hidden full column"></h3>
 <div class="social-auth six columns">
 <a class="button button-social-facebook button-w-i button-block" href="/users/auth/facebook?referer=%2Fprivacy">
@@ -298,6 +301,7 @@ Connect with Twitter
 <div class="classic-auth six columns">
 <input placeholder="Email address" class="required" type="email" name="user[email]" id="user_email">
 <input placeholder="Password" class="password required" type="password" name="user[password]" id="user_password">
+<input value="1" type="hidden" name="user[remember_me]" id="user_remember_me">
 </div>
 
 <div class="g-recaptcha" data-sitekey="6LeLNB8TAAAAAK8ld0Y0v3t0OmN1ZKmqldC2513g"></div>
@@ -336,6 +340,7 @@ Connect with Twitter
 
 
 <script src="https://static-1.gumroad.com/res/gumroad/assets/gr-built/boot/base-07d76b551cf616275eb0316863fc228a4c4f41d7fb9a9bf5aaba77e0ad86f609.js"></script>
+
 
 
 
