--- a/w/wy/wyz/wyzant.com.html
+++ b/w/wy/wyz/wyzant.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the wyzant.com privacy policy that was archived on 2017-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170622125305id_/https%3A//www.wyzant.com/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wyzant.com privacy policy that was archived on 2017-08-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170831183912id_/https%3A//www.wyzant.com/privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
     <title>Privacy Policy | Wyzant Tutoring</title>
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,300italic,400italic,600italic|Ubuntu:300,400,500">
     <link rel="stylesheet" href="//d1azc1qln24ryf.cloudfront.net/65664/wyzicons/style-cf.css?v=86btcj">
-    <link href="/dist/bundles/css/site.css?v=3cn8yHsKXWZ1yhG3q5jOELjix8I3mJ-4YaWbMqMH46Q1" rel="stylesheet">
+    <link href="/dist/bundles/css/site.css?v=lRZEUOSGjR7ullLH2yGJVMksuPrRnUubpNWcknWS2cw1" rel="stylesheet">
 
 
     <link rel="canonical" href="https://www.wyzant.com/privacypolicy">
@@ -128,17 +128,17 @@
                 </div>
             </div>
             <div class="ui-menu-item ui-has-subnav" id="navTutors">
-                <div class="text-small show-inline-block"><span>Tutors <i class="wc-caret-down wc-white"></i></span>
+                <div class="text-small show-inline-block"><span>Start Tutoring <i class="wc-caret-down wc-white"></i></span>
                 </div>
                 <div class="ui-menu-submenu">
                         <div>
                             <a title="Apply Now" href="/tutorsignupstart" data-wyz-tracking-click="" data-wyz-tracking-label="Apply Now" data-wyz-tracking-cat="Tutor Nav">Apply Now</a>
                         </div>
                         <div>
-                            <a title="Tutoring Jobs" href="/jobsearch" data-wyz-tracking-click="" data-wyz-tracking-label="Tutoring Jobs" data-wyz-tracking-cat="Tutor Nav">Tutoring Jobs</a>
+                            <a title="About Tutoring Jobs" href="/tutorhome" data-wyz-tracking-click="" data-wyz-tracking-label="About Tutoring Jobs" data-wyz-tracking-cat="Tutor Nav">About Tutoring Jobs</a>
                         </div>
                         <div>
-                            <a title="About Tutoring With Us" href="/tutorhome" data-wyz-tracking-click="" data-wyz-tracking-label="About Tutoring With Us" data-wyz-tracking-cat="Tutor Nav">About Tutoring With Us</a>
+                            <a title="Find Tutoring Jobs" href="/jobsearch" data-wyz-tracking-click="" data-wyz-tracking-label="Find Tutoring Jobs" data-wyz-tracking-cat="Tutor Nav">Find Tutoring Jobs</a>
                         </div>
                         <div>
                             <a title="How It Works For Tutors" href="/howitworks/tutors" data-wyz-tracking-click="" data-wyz-tracking-label="How It Works For Tutors" data-wyz-tracking-cat="Tutor Nav">How It Works For Tutors</a>
@@ -149,7 +149,7 @@
                 </div>
             </div>
             <div class="ui-menu-item ui-has-subnav" id="navAbout">
-                <div class="text-small show-inline-block"><span>About Wyzant <i class="wc-caret-down wc-white"></i></span>
+                <div class="text-small show-inline-block"><span>About Us <i class="wc-caret-down wc-white"></i></span>
                 </div>
                 <div class="ui-menu-submenu">
                         <div>
@@ -170,7 +170,6 @@
 
 
             <div class="right medium-hide">
-                <a href="tel:+1-877-999-2681"><i class="wc-phone-alt wc-white"></i></a>
                     <a href="#mobileSearch" id="mobileNavSearch" data-expandtarget="#mobileSubjectSearch"><i class="wc-search-new wc-white"></i></a>
             </div>
         </div>
@@ -231,10 +230,10 @@
                             <a title="Apply Now" href="/tutorsignupstart" data-wyz-tracking-click="" data-wyz-tracking-label="Apply Now" data-wyz-tracking-cat="Tutor Nav">Apply Now</a>
                         </div>
                         <div class="ui-mobile-menu-item">
-                            <a title="Tutoring Jobs" href="/jobsearch" data-wyz-tracking-click="" data-wyz-tracking-label="Tutoring Jobs" data-wyz-tracking-cat="Tutor Nav">Tutoring Jobs</a>
+                            <a title="About Tutoring Jobs" href="/tutorhome" data-wyz-tracking-click="" data-wyz-tracking-label="About Tutoring Jobs" data-wyz-tracking-cat="Tutor Nav">About Tutoring Jobs</a>
                         </div>
                         <div class="ui-mobile-menu-item">
-                            <a title="About Tutoring With Us" href="/tutorhome" data-wyz-tracking-click="" data-wyz-tracking-label="About Tutoring With Us" data-wyz-tracking-cat="Tutor Nav">About Tutoring With Us</a>
+                            <a title="Find Tutoring Jobs" href="/jobsearch" data-wyz-tracking-click="" data-wyz-tracking-label="Find Tutoring Jobs" data-wyz-tracking-cat="Tutor Nav">Find Tutoring Jobs</a>
                         </div>
                         <div class="ui-mobile-menu-item">
                             <a title="How It Works For Tutors" href="/howitworks/tutors" data-wyz-tracking-click="" data-wyz-tracking-label="How It Works For Tutors" data-wyz-tracking-cat="Tutor Nav">How It Works For Tutors</a>
@@ -353,7 +352,7 @@
         <div class="column medium-6 medium-right">
             <div class="row">
                 <div class="column">
-                    <h5 class="text-caps spc-tiny-n hide medium-show">Download our free app</h5>
+                    <h5 class="text-caps text-semibold spc-tiny-n hide medium-show">Download our free app</h5>
 
                     <div class="hide medium-show">
                         <p class="text-disabled spc-sm-n spc-med-s hide medium-show">Enter your number and we’ll text you a download link. (We won’t spam you—promise. But message and data rates may apply.)</p>
@@ -400,7 +399,7 @@
         <div class="column medium-6">
             <div class="row spc-tiny-n">
                 <div class="column medium-4 spc-zero medium-spc-zero-n">
-                    <a class="wyzantExpander" data-expandtarget="#get-to-know-links"><h5 class="text-caps show-inline-block">Get to know us</h5></a>
+                    <a class="wyzantExpander" data-expandtarget="#get-to-know-links"><h5 class="text-semibold show-inline-block">GET TO KNOW US</h5></a>
                     <ul id="get-to-know-links" class="reset medium-spc-sm-n">
                         <li><a href="/about">About Us</a></li>
                         <li><a href="/contactus">Contact Us</a></li>
@@ -412,7 +411,7 @@
                     </ul>
                 </div>
                 <div class="column medium-4 spc-zero medium-spc-zero-n">
-                    <a class="wyzantExpander" data-expandtarget="#learn-with-us-links"><h5 class="text-caps show-inline-block">Learn with us</h5></a>
+                    <a class="wyzantExpander" data-expandtarget="#learn-with-us-links"><h5 class="text-semibold show-inline-block">LEARN WITH US</h5></a>
                     <ul id="learn-with-us-links" class="reset medium-spc-sm-n">
                         <li><a href="/match?flow=search">Find a Tutor</a></li>
                         <li><a href="/emailtutor">Request a Tutor</a></li>
@@ -423,7 +422,7 @@
                     </ul>
                 </div>
                 <div class="column medium-4 spc-zero medium-spc-zero-n">
-                    <a class="wyzantExpander" data-expandtarget="#work-with-us-links"><h5 class="text-caps show-inline-block">Work with us</h5></a>
+                    <a class="wyzantExpander" data-expandtarget="#work-with-us-links"><h5 class="text-semibold show-inline-block">WORK WITH US</h5></a>
                     <ul id="work-with-us-links" class="reset medium-spc-sm-n">
                         <li><a href="/about/careers">Careers at Wyzant</a></li>
                         <li><a href="/tutorsignupstart">Apply to Tutor</a></li>
@@ -437,7 +436,7 @@
 
     <div class="mid-footer text-center row">
         <div class="column medium-hide">
-            <h5 class="text-caps spc-n">Download our free app</h5>
+            <h5 class="text-semibold spc-n">DOWNLOAD OUR FREE APP</h5>
 
             <div class="mobile-download-buttons medium-hide spc-sm-n spc-s">
                 <a class="btn btn-ghost text-nowrap btn-spc spc-sm" target="_blank" href="https://play.google.com/store/apps/details?id=com.wyzant.studentapp">
@@ -449,7 +448,7 @@
             </div>
         </div>
         <div class="column medium-4">
-            <h5 class="text-caps spc-n">Let’s keep in touch</h5>
+            <h5 class="text-semibold spc-n">LET’S KEEP IN TOUCH</h5>
             <div class="spc-med-n spc-s">
                 <a href="http://www.facebook.com/Wyzant" target="_blank"><i class="wc-facebook wc-2x wc-vert-align"></i></a>
                 <a href="http://www.instagram.com/Wyzant" target="_blank"><i class="wc-instagram wc-2x wc-vert-align spc-ew"></i></a>
@@ -457,11 +456,11 @@
             </div>
         </div>
         <div class="column medium-4">
-            <h5 class="text-caps spc-n">Feeling a little lost?</h5>
+            <h5 class="text-semibold spc-n">FEELING A LITTLE LOST?</h5>
             <p class="spc-s"><a href="/emailtutor">Start here</a> or give us a call: <a href="tel:8779992681">877-999-2681</a></p>
         </div>
         <div class="column medium-4">
-            <h5 class="text-caps spc-med-n medium-spc-n">Best in business since 2005</h5>
+            <h5 class="text-semibold spc-med-n medium-spc-n">BEST IN BUSINESS SINCE 2005</h5>
             <div class="spc-med-n spc-med-s medium-spc-s">
                 <a class="show-inline-block" href="http://www.bbb.org/chicago/business-reviews/tutoring/wyzantcom-in-chicago-il-88349022#bbblogo">
     <img class="bbb-logo-dark" src="/images/logos/bbb-logo-grey.png" width="82">
@@ -478,7 +477,7 @@
             <div class="column medium-6">
                 <div class="row">
                     <div class="column spc-sm-s">
-                        <h5 class="text-caps">Tutors by Subject</h5>
+                        <h5 class="text-semibold">TUTORS BY SUBJECT</h5>
                     </div>
                 </div>
                 <div class="row">
@@ -518,7 +517,7 @@
             <div class="column medium-6">
                 <div class="row">
                     <div class="column spc-sm-s">
-                        <h5 class="text-caps">Tutors by location</h5>
+                        <h5 class="text-semibold">TUTORS BY LOCATION</h5>
                     </div>
                 </div>
                 <div class="row">
@@ -573,14 +572,14 @@
 
     <script src="https://static1.wyzantcdn.com/js/wyzant.logging.min.js"></script>
 <script src="/dist/compiled/logging.js"></script>
-<script src="/dist/bundles/js/sso.js?v=pMpWlYFr_TrAyaoF2QOue4sH_lO7zns8SQfBEJp_HOA1"></script>
+<script src="/dist/bundles/js/sso.js?v=tulaiTsQuB35nEWypZW2z-CvPumT7ZgafjPr3wgE_6U1"></script>
 <script src="/dist/compiled/sso.js"></script>
 
 
         <script src="//maps.googleapis.com/maps/api/js?v=3.exp&amp;libraries=places&amp;key=AIzaSyC3ohUZZnqNtFYDO4I7pbV4g5nQWdnC7Gg"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
-<script src="/dist/bundles/js/site-footer-legacy.js?v=Usa28n-46_FOzhQ3g9aN2mKimQunas29LCYLKjVqSg01"></script>
-<link href="/dist/bundles/css/autocomplete.css?v=5IW2Jus7A0cjLzV8cVs4-i_66kWmmdshkQnFjZr6q3o1" rel="stylesheet"><div id="fb-root" class=" fb_reset"><div style="position: absolute; top: -10000px; height: 0px; width: 0px;"><div><iframe name="fb_xdm_frame_https" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" id="fb_xdm_frame_https" aria-hidden="true" title="Facebook Cross Domain Communication Frame" tabindex="-1" src="https://staticxx.facebook.com/connect/xd_arbiter/r/Z2duorNoYeF.js?version=42#channel=f18d29018060928&amp;origin=https%3A%2F%2Fweb.archive.org" style="border: none;"></iframe></div></div><div style="position: absolute; top: -10000px; height: 0px; width: 0px;"><div><iframe name="f341fab16858ce" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" src="https://www.facebook.com/connect/ping?client_id=1622656201348544&amp;domain=web.archive.org&amp;origin=1&amp;redirect_uri=https%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter%2Fr%2FZ2duorNoYeF.js%3Fversion%3D42%23cb%3Df1484f4147345fc%26domain%3Dweb.archive.org%26origin%3Dhttps%253A%252F%252Fweb.archive.org%252Ff18d29018060928%26relation%3Dparent&amp;response_type=token%2Csigned_request%2Ccode&amp;sdk=joey" style="display: none;"></iframe></div></div></div>
+<script src="/dist/bundles/js/site-footer-legacy.js?v=R2Tts8tHb6rBBX_fWucOZry-souIJHHQhiCYNNA74cQ1"></script>
+<link href="/dist/bundles/css/autocomplete.css?v=5IW2Jus7A0cjLzV8cVs4-i_66kWmmdshkQnFjZr6q3o1" rel="stylesheet"><div id="fb-root" class=" fb_reset"><div style="position: absolute; top: -10000px; height: 0px; width: 0px;"><div><iframe name="fb_xdm_frame_https" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" id="fb_xdm_frame_https" aria-hidden="true" title="Facebook Cross Domain Communication Frame" tabindex="-1" src="https://staticxx.facebook.com/connect/xd_arbiter/r/Z2duorNoYeF.js?version=42#channel=fb2ab31428308c&amp;origin=https%3A%2F%2Fweb.archive.org" style="border: none;"></iframe></div></div><div style="position: absolute; top: -10000px; height: 0px; width: 0px;"><div><iframe name="fec98e0a770524" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" src="https://www.facebook.com/connect/ping?client_id=1622656201348544&amp;domain=web.archive.org&amp;origin=1&amp;redirect_uri=https%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter%2Fr%2FZ2duorNoYeF.js%3Fversion%3D42%23cb%3Df1c2c0704cc98b8%26domain%3Dweb.archive.org%26origin%3Dhttps%253A%252F%252Fweb.archive.org%252Ffb2ab31428308c%26relation%3Dparent&amp;response_type=token%2Csigned_request%2Ccode&amp;sdk=joey" style="display: none;"></iframe></div></div></div>
 
 
     
