tambayan-ofw.com (archived on 2017-08-31)
{
  "alexa_rank": 64497,
  "analysis_subcorpus": true,
  "categories": "education;entertainment",
  "char_count": 3463,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 15.43,
  "homepage_snapshot_redirected_domain": "tambayan-ofw.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170906205602id_/http://www.tambayan-ofw.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170906205602id_/http%3A//tambayan-ofw.com",
  "interval": "2017_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "tambayan-ofw.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170831203906id_/http%3A//www.tambayan-ofw.com/privacy",
  "policy_title": "Tambayan-ofw :: Privacy Policy",
  "policy_url": "tambayan-ofw.com/privacy",
  "sha1": "9197f4c2a8532cd20f6a622b02fa46648ab1f18a",
  "simhash": 17052201875322911016,
  "simhash_updated": false,
  "site_hostname": "tambayan-ofw.com",
  "site_url": "http://tambayan-ofw.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170831203906",
  "word_count": 580,
  "year": 2017
}

--- a/t/ta/tam/tambayan-ofw.com.html
+++ b/t/ta/tam/tambayan-ofw.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tambayan-ofw.com privacy policy that was archived on 2017-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170626120536id_/http%3A//www.tambayan-ofw.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tambayan-ofw.com privacy policy that was archived on 2017-08-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170831203906id_/http%3A//www.tambayan-ofw.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
       <base href="http://www.tambayan-ofw.com/">
@@ -26,7 +26,7 @@
         var reset_token = '';
       
       </script>
-      <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <script> (adsbygoogle = window.adsbygoogle || []).push({ google_ad_client: "ca-pub-3102114826829472", enable_page_level_ads: true }); </script>
+      
    </head>
    <body class="dispositivo-desktop contenido-aviso">
       <div id="fb-root"></div>
@@ -68,7 +68,7 @@
       <main>
       <div class="advertisement">
           <p style="text-align: center;"><span style="text-decoration: underline;">Advertisement</span></p>
-          <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3102114826829472" data-ad-slot="6422044148" data-ad-format="auto"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
+          <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <!-- auto --> <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8261101764782708" data-ad-slot="8159951810" data-ad-format="auto"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
       </div>
       		<h1>Privacy Policy</h1>
 		<p></p><p><span style="color:#A9A9A9">We recognize the importance of our visitor’s privacy and we aim to preserve the Privacy by all means. The information furnished herewith will inform you on the types of personal information we receive and collect when you use (operate) and visit Tambayan-ofw.com, and how we safeguard your information. You can be assured that your personal information is never leaked or sold to the third parties and they are well protected by us.</span></p>
