copperchef.com (archived on 2017-08-31)
{
  "alexa_rank": 325744,
  "analysis_subcorpus": true,
  "categories": "business;foodandrecipes;shopping",
  "char_count": 6240,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.68,
  "homepage_snapshot_redirected_domain": "copperchef.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170930214454id_/http://www.copperchef.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170930214454id_/http%3A//copperchef.com",
  "interval": "2017_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "copperchef.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170831234509id_/http%3A//www.copperchef.com/policy.php",
  "policy_title": "Privacy Policy | Copper Chef XL\u2122",
  "policy_url": "copperchef.com/policy.php",
  "sha1": "f31157e5b5caa09a7292e0d711b7b0e86d88e18d",
  "simhash": 16449363092529704254,
  "simhash_updated": false,
  "site_hostname": "copperchef.com",
  "site_url": "http://copperchef.com",
  "smog": 15.6,
  "strict_updated": false,
  "timestamp": "20170831234509",
  "word_count": 1031,
  "year": 2017
}

--- a/c/co/cop/copperchef.com.html
+++ b/c/co/cop/copperchef.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the copperchef.com privacy policy that was archived on 2017-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170628021102id_/http%3A//copperchef.com/policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the copperchef.com privacy policy that was archived on 2017-08-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170831234509id_/http%3A//www.copperchef.com/policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -29,7 +29,7 @@ library_tolerance=2500,
 use_existing_jquery=false,
 // DO NOT EDIT BELOW THIS LINE
 f=false,d=document;return{use_existing_jquery:function(){return use_existing_jquery;},library_tolerance:function(){return library_tolerance;},finish:function(){if(!f){f=true;var a=d.getElementById('_vis_opt_path_hides');if(a)a.parentNode.removeChild(a);}},finished:function(){return f;},load:function(a){var b=d.createElement('script');b.src=a;b.type='text/javascript';b.innerText;b.onerror=function(){_vwo_code.finish();};d.getElementsByTagName('head')[0].appendChild(b);},init:function(){settings_timer=setTimeout('_vwo_code.finish()',settings_tolerance);var a=d.createElement('style'),b='body{opacity:0 !important;filter:alpha(opacity=0) !important;background:none !important;}',h=d.getElementsByTagName('head')[0];a.setAttribute('id','_vis_opt_path_hides');a.setAttribute('type','text/css');if(a.styleSheet)a.styleSheet.cssText=b;else a.appendChild(d.createTextNode(b));h.appendChild(a);this.load('//dev.visualwebsiteoptimizer.com/j.php?a='+account_id+'&u='+encodeURIComponent(d.URL)+'&r='+Math.random());return settings_timer;}};}());_vwo_settings_timer=_vwo_code.init();
-</script><script src="//dev.visualwebsiteoptimizer.com/j.php?a=56956&amp;u=https%3A%2F%2Fweb.archive.org%2Fweb%2F20170628021102id_%2Fhttp%253A%2F%2Fcopperchef.com%2Fpolicy.php&amp;r=0.2392975331149898" type="text/javascript"></script>
+</script><script src="//dev.visualwebsiteoptimizer.com/j.php?a=56956&amp;u=https%3A%2F%2Fweb.archive.org%2Fweb%2F20170831234509id_%2Fhttp%253A%2F%2Fwww.copperchef.com%2Fpolicy.php&amp;r=0.2983163988107731" type="text/javascript"></script>
 <!-- End Visual Website Optimizer Asynchronous Code -->
 
 <!-- Start GA Code -->
@@ -119,14 +119,12 @@ else {window.attachEvent('onload', _onload)}
 
 <body>
 
-<div class="live_help">
-<a href="#" onclick="window.open('https://public.mc.hostedcc.com/tristar/forms/Chat/Copper%20Chef%20XL','popup','width=400,height=600,scrollbars=no,resizable=no,toolbar=no,directories=no,location=no,menubar=no,status=no,left=0,top=0'); return false"><div class="chat1"></div></a></div>
 <div class="outer-header-container">
 <div class="header-container">
 	
     <div class="header-logo">
     	<a href="http://copperchef.com/">
-       	<img src="images/header-logo.png" alt="Copper Chef XL">
+       	<img src="images/header-logo.png" alt="Copper Chef">
       	</a>
     </div>
     
@@ -156,9 +154,16 @@ else {window.attachEvent('onload', _onload)}
       </ul>
     </li>
     <li><a href="reviews.php">Reviews</a></li>
-    <li><a href="faqs.php">FAQs</a></li>
+    <li><a href="faqs.php">FAQs</a>
+      <ul>
+         <li><a href="faqs-deep-fry-pan.php">Deep Fry Pan</a></li>
+         <li><a href="faqs-casserole-pan.php">Casserole Pan</a></li>
+         <li><a href="faqs-induction-cooktop.php">Induction Cooktop</a></li>
+      </ul>
+    </li>
     <li><a href="features.php">Features</a>
       <ul>
+         <li><a href="features-deep-fry-pan.php">Deep Fry Pan</a></li>
          <li><a href="features-casserole-pan.php">Casserole Pan</a></li>
          <li><a href="features-induction-cooktop.php">Induction Cooktop</a></li>
          <li><a href="benefits.php">Benefits</a></li>
@@ -166,8 +171,8 @@ else {window.attachEvent('onload', _onload)}
     </li>
     <li><a href="https://www.unitycarts.com/copperchefxl_parts_CXLPARTTW/cart.aspx"> Parts &amp; Accessories</a></li>
     <li><a href="http://blog.copperchef.com/" target="_blank">Blog</a></li>
-    <li><a href="http://compracopperchefxl.com/" class="orderNowButtonEspanol">Spanish</a></li>
-    <li><a href="http://copperchefxl.ca/" class="orderNowButtonCanada">Canada</a></li>
+    <li><a href="http://buycopperchef.ca/" class="orderNowButtonCanada">Canada</a></li>
+    <li><a href="http://compracopperchefxl.com/" class="orderNowButtonEspanol">Español</a></li>
    	<li><a href="shop.php" class="orderNowButton">Order Now</a></li>
 </ul>
 </div>
@@ -296,7 +301,8 @@ else {window.attachEvent('onload', _onload)}
 </div>
 </div>
 <!--FOOTER NAV END-->
-   
+  
+  
 <!--SOCIAL SECTION-->
 <div class="tristar-copyright">
 <div class="footer-social-icons">
@@ -306,7 +312,7 @@ else {window.attachEvent('onload', _onload)}
         <li><a href="https://www.instagram.com/copperchefcookware/" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
         <li><a href="https://www.youtube.com/copperchefsystem" target="_blank" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
         <li><a href="https://www.pinterest.com/copperchefpan/" target="_blank" class="social-icon"> <i class="fa fa-pinterest-p"></i></a></li>
-        <li><a href="http://blog.copperchef.com" class="social-icon"> <i class="fa fa-rss"></i></a></li>
+        <li><a href="http://blog.copperchef.com" target="_blank" class="social-icon"> <i class="fa fa-rss"></i></a></li>
 	</ul>
 </div>
 </div>
