--- a/u/us/usa/usanotebook.com.html
+++ b/u/us/usa/usanotebook.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the usanotebook.com privacy policy that was archived on 2017-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170628130256id_/http%3A//usanotebook.com/privacypolicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the usanotebook.com privacy policy that was archived on 2017-09-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170901013954id_/http%3A//www.usanotebook.com/privacypolicy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head></head><body bgcolor="#A5BE29" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onload="MM_preloadImages('images/topseller_on.gif')"><center>
 <title>Privacy Policy - USAnotebook.com</title>
@@ -180,7 +180,7 @@ function MM_swapImgRestore() { //v3.0
 <a href="international_laptop_sales.php">International&nbsp;Laptop&nbsp;Sales</a>
 <table cellspacing="0" cellpadding="0" border="0" width="100%"><tbody><tr><td><a href="http://www.usanotebook.com/laptop_wholesale"><b>Wholesale Login</b></a></td><td align="left"><img border="0" src="images/new.gif" vspace="3"></td></tr></tbody></table>
 <br>
-<img src="images/shopbrand.gif"><a href="dell_laptops_tablets.php?catid=24" target="unb24">Dell (4)</a><a href="hp_laptops_tablets.php?catid=27" target="unb27">HP (1)</a><a href="lenovo_laptops_tablets.php?catid=29" target="unb29">Lenovo (19)</a><a href="toshiba_laptops_tablets.php?catid=31" target="unb31">Toshiba (5)</a><br>
+<img src="images/shopbrand.gif"><a href="dell_laptops_tablets.php?catid=24" target="unb24">Dell (3)</a><a href="hp_laptops_tablets.php?catid=27" target="unb27">HP (1)</a><a href="lenovo_laptops_tablets.php?catid=29" target="unb29">Lenovo (10)</a><a href="toshiba_laptops_tablets.php?catid=31" target="unb31">Toshiba (1)</a><br>
 <img src="images/shopprice.gif">
 <a href="Below_250_laptops.php">Below $250 Notebooks</a>
 <a href="250_350_laptops.php">$250 - $350 Notebooks</a>
@@ -347,15 +347,15 @@ function MM_swapImage() { //v3.0
 <table border='0' width='400'>
 	<tr>
 		<td>
-			<span class='top_s'><a href='computer_laptops_on_sale.php?id=4204'>Lenovo ThinkPad T410</a></span><br>
+			<span class='top_s'><a href='computer_laptops_on_sale.php?id=4005'>Lenovo ThinkPad T410</a></span><br>
 		</td>
 		<td align='right'>
-			<font size='2'><b>On Sale for: <font color='red'>$199.00</font></b></font>
+			<font size='2'><b>On Sale for: <font color='red'>$169.00</font></b></font>
 		</td>
 	</tr>
 	<tr>
 		<td colspan=2>			
-			<font face='arial' size='2'>Core i5-560M 2660 Mhz, DVDRW Drive</font>
+			<font face='arial' size='2'>Core i5-540M 2530 Mhz, DVDRW Drive</font>
 		</td>
 	</tr>
 </table>
@@ -363,15 +363,15 @@ function MM_swapImage() { //v3.0
 <table border='0' width='400'>
 	<tr>
 		<td>
-			<span class='top_s'><a href='computer_laptops_on_sale.php?id=4205'>Lenovo ThinkPad T410</a></span><br>
+			<span class='top_s'><a href='computer_laptops_on_sale.php?id=4206'>Lenovo ThinkPad T420</a></span><br>
 		</td>
 		<td align='right'>
-			<font size='2'><b>On Sale for: <font color='red'>$199.00</font></b></font>
+			<font size='2'><b>On Sale for: <font color='red'>$179.00</font></b></font>
 		</td>
 	</tr>
 	<tr>
 		<td colspan=2>			
-			<font face='arial' size='2'>Core i5-520M 2400 Mhz, DVDRW Drive</font>
+			<font face='arial' size='2'>Core i5-2520M 2500 Mhz, DVDRW Drive</font>
 		</td>
 	</tr>
 </table>
@@ -496,7 +496,7 @@ function MM_swapImage() { //v3.0
 	</tr>
 </tbody></table>
 
-<img src="http://counter.usanotebook.com/c.php?mid=4&amp;mip=207.241.229.32&amp;mre=http%3A%2F%2Fusanotebook.com%2F" width="1" height="1">
+<img src="http://counter.usanotebook.com/c.php?mid=4&amp;mip=54.165.59.7&amp;mre=" width="1" height="1">
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
