--- a/f/fa/fan/fanfiction.net.html
+++ b/f/fa/fan/fanfiction.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fanfiction.net privacy policy that was archived on 2017-03-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170328022116id_/http%3A//www.fanfiction.net/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fanfiction.net privacy policy that was archived on 2017-09-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170901085949id_/https%3A//www.fanfiction.net/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
         <meta charset="utf-8">
@@ -115,14 +115,7 @@ if(XUNAME) {
 else {
     document.write("<a href='/login.php' style='color:white;'><span class='icon-lock' style='font-size:15px;position:relative;top:1px'></span> Login</a> | <a href='/signup.php' style='color:white;'>Sign Up</a>");
 }
-</script><a href="/login.php" style="color:white;"><span class="icon-lock" style="font-size:15px;position:relative;top:1px"></span> Login</a> | <a href="/signup.php" style="color:white;">Sign Up</a></span><a href="/" style="font-size:1.1em;border:none;">FanFiction</a>&nbsp;&nbsp;<small>|</small>&nbsp;&nbsp;unleash your imagination <span class="icon-kub-mobile" style="font-size:14px;margin-left:10px;" title="Mobile Edition" onclick="location = '//m.fanfiction.net/m/yes_mobile.php'"></span><span title="Fontastic Panel: UI Settings" class="icon-tl-text" style="font-size:14px;margin-left:10px;" onclick="_fontastic_init('ui'); $('#_fontastic_ui').modal('show');"></span><div class="xmenu_item"><span title="Language" onclick="$('#google_translate_element').toggle();" class="icon-globe" style="cursor:pointer;font-size:14px;margin-left:10px;"></span> <div align="center" class="hide" id="google_translate_element"></div>
-                </div>
-                <style>
-                #google_translate_element a {
-                    color:black;
-                }
-                </style>
-    </div>
+</script><a href="/login.php" style="color:white;"><span class="icon-lock" style="font-size:15px;position:relative;top:1px"></span> Login</a> | <a href="/signup.php" style="color:white;">Sign Up</a></span><a href="/" style="font-size:1.1em;border:none;">FanFiction</a>&nbsp;&nbsp;<small>|</small>&nbsp;&nbsp;unleash your imagination <span class="icon-kub-mobile" style="font-size:14px;margin-left:10px;" title="Mobile Edition" onclick="location = '//m.fanfiction.net/m/yes_mobile.php'"></span><span title="Fontastic Panel: UI Settings" class="icon-tl-text" style="font-size:14px;margin-left:10px;" onclick="_fontastic_init('ui'); $('#_fontastic_ui').modal('show');"></span></div>
 </div>
 
 <div style="width:100%;" class="zmenu">
@@ -258,7 +251,7 @@ else {
                 });
 
             </script>
-            <form method="get" id="search_form" action="/search.php" class="pull-right">
+            <form method="get" id="search_form" action="/search/" class="pull-right">
                 <div class="input-prepend">
                     <div class="btn-group">
                         <button class="btn dropdown-toggle" data-toggle="dropdown">
@@ -627,8 +620,4 @@ $(function() {
     });
 });
 </script>
-        <script>
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, multilanguagePage: true}, 'google_translate_element');
-}
-</script><script async="" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script></body></html>
+        </body></html>
