--- a/w/we/web/webcamworld.com.html
+++ b/w/we/web/webcamworld.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the webcamworld.com privacy policy that was archived on 2017-02-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170228085601id_/http%3A//webcamworld.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the webcamworld.com privacy policy that was archived on 2017-09-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170902021754id_/http%3A//www.webcamworld.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="UTF-8">
